src/main/resources/static/css/luckylister.css
body {
    overflow: hidden;
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
}
@font-face {
  font-family: 'FontAwesome';
  src: url('fontawesome-webfont.eot');
  src: url('fontawesome-webfont.eot?#iefix') format('embedded-opentype'),
       url('fontawesome-webfont.woff2') format('woff2'),
       url('fontawesome-webfont.woff') format('woff'),
       url('fontawesome-webfont.ttf') format('truetype'),
       url('fontawesome-webfont.svg#fontawesomeregular') format('svg');
  font-weight: normal;
  font-style: normal;
  font-display: block;
}
.lucky-top-nav {
	padding-left: 4px;
    padding-top: 4px;
    padding-bottom: 4px;
}
.lucky-left-nav {
	display: flex;
	align-items: center;
}
.lucky-navbar-title {
    font-size: 24px;
    font-weight: bold;
    text-transform: none;
    padding-top: 0px;
    margin-right: 4px;
}
.lucky-navbar-right {
	justify-content: flex-end;
}
.lucky-nav-group {
	align-self: center;
}
.lucky-nav-button {
	padding: 6px;
	font-size: 20px;
	color: white;
	border-color: white;
    width: 30px;
}
.lucky-nav-percent {
    height: 56px;
    width: 50px;
    color: white;
}
.lucky-percent {
    position:relative;
}
.lucky-canvas {
    top: 6px;
    position: relative;
    width: 42px;
    height: 42px;
}
.lucky-percentage-text {
    display:block;
    text-align:center;
    font-weight: bold;
    position: relative;
    top: -42px;
    left: 0;
    width: 42px;
    height: 42px;
    line-height: 42px;
}
.lucky-percentage-details {
	position: relative;
	text-align: center;
	font-size: 10px;
	width: 42px;
    height: 42px;
    top: -43px;
}
.lucky-container {
	width: 100%;
    min-width: 100%;
    min-height: 100%;
    height: 100%;
    padding-top: 0px;
    padding-bottom: 0px;
    box-sizing: border-box;
    padding-left: 0px !important;
    padding-right: 0px !important;
}
.lucky-grid {
	display: flex;
    flex-wrap: wrap;
    text-align: center;
    align-content: baseline;
    height: 100%;
    overflow-y: scroll;
}
.lucky-searchbox {
	margin-left: 4px;
	margin-top: 4px;
	margin-bottom: 4px;
	padding-left: 10px;
    width: 89%;
    border-radius: 25px;
    border: 2px solid #73AD21;
}
.lucky-cell {
	position: relative;
    flex: 0 0 14.2857143%;
    border: none;
    padding: 0px;
    background: transparent;
    align-self: baseline;
}
.lucky-cell-tick {
	position: absolute;
    left: 10px;
    font-size: small;
    width: 1.5rem;
}
.lucky-cell-label {
	font-size: 14px;
    font-weight: 700;
    width: 100px;
    display: inline-block;
    white-space: nowrap;
}
.lucky-img-notavailable {
	background-image: url('/images/noentry.png');
    background-size: contain;
    background-position: center;
    background-repeat: no-repeat;
    width: 70%;
    height: 70%;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}
.lucky-need {
	color: grey;
}
.lucky-got {
	color: green;
}
.lucky-grid-header {
	display: flex;
    justify-content: space-between;
}
.lucky-button-group {
	margin-right: 10px;
	margin-left: 10px;
	align-self: center;
}
.lucky-small-button {
	padding: 6px;
	font-size: 11px;
}
.lucky-small-alert {
	font-size: 12px;
	padding: 4px;
	margin: 4px;
}
.lucky-user-search {
	margin: 4px;
}
.lucky-lead-table {
    padding: 0px;
    border: none !important;
    border-spacing: 0px !important;
}
.lucky-rank-1 {
    font-size: 24px;
    background-color:#b3d9ff;
}
.lucky-rank-2 {
    font-size: 20px;
    background-color: #cce6ff;
}
.lucky-rank-3 {
    font-size: 18px;
    background-color: #e6f2ff;
}
#leadersTableBody td {
    padding: 8px !important;
    text-align: left;
}
.lucky-lead-medal1 {
    background-image: url('/images/GoldMedal.png');
    width: 28px;
    height: 50px;
    display: block;
    background-repeat: no-repeat;
    background-size: contain;
}
.lucky-lead-medal2 {
    background-image: url('/images/SilverMedal.png');
    width: 28px;
    height: 40px;
    display: block;
    background-repeat: no-repeat;
    background-size: contain;
}
.lucky-lead-medal3 {
    background-image: url('/images/BronzeMedal.png');
    width: 28px;
    height: 38px;
    display: block;
    background-repeat: no-repeat;
    background-size: contain;
}
.lucky-lead-total {
	text-align: center;
}
.lucky-user-cell {
	position: relative;
    flex: 0 0 14.2857143%;
    align-self: baseline;
    margin: 4px;
    font-size: 18px;
}
#question-users {
	margin-top: 4px;
}
.lucky-professor {
	background-image: url('/images/professor.png');
	width: 100%;
	height: 100%;
	display: block;
    background-repeat: no-repeat;
    background-size: contain;
}
.lucky-professor-jumbo {
    padding: 8px;
    height: 100%;
}

